estilos seccion info y testimonials

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 	/*margin-top: -97px;*/
 }
 
-.carousel-inner {
+.carousel-header {
 	top: -107px;
 }
 
@@ -24,14 +24,65 @@
 }
 
 @media screen and (min-width: 768px){
-.carousel-caption {
+.captionheader {
     right: 20%;
     left: 20%;
-    padding-bottom: 145px;
+    padding-bottom: 300px;
 }	
 }
-.carousel-caption {
+.captionheader {
     right: 20%;
     left: 20%;
-    padding-bottom: 145px;
+    padding-bottom: 300px;
+}
+
+.boton {
+	border-radius: 0px;
+	border-color: #de0029;
+	background-color: #de0029;
+	text-transform: uppercase;
+	padding: 10px 20px;
+	margin-top: 50px;
+	font-size: 0.7em;
+}
+
+.titulocarousel {
+	text-transform: uppercase;
+	/*font-size: 1.5em;*/
+	margin-bottom: 50px;
+}
+
+.slideheader {
+	height: 898px;
+}
+
+.info {
+	margin-top: 50px;
+}
+
+hr{
+    border-top: 5px solid #de0029;
+    width: 30%;
+}
+
+.slidetestimonial {
+	background-color: #de0029;
+	margin-top: 70px;
+}
+.testimonialimg {
+	width: 50%;
+}
+
+.caption-testimonial {
+	width: 30%;
+	left: 50%;
+	top: 50px;
+	padding-left: 30px;
+}
+
+.indicators-testimonial {
+	width: 30%;
+	left: 50%;
+	bottom: 150px;
+	margin-left: 0;
 }
