color del boton

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@
 	border-radius: 0px;
 	border-color: #de0029;
 	background-color: #de0029;
+	color: whitesmoke;
 	text-transform: uppercase;
 	padding: 10px 20px;
 	margin-top: 50px;
