--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,72 @@
 .menutop {
-	text-transform: uppercase;
-	background-color: yellow;
-	border-color: yellow;
-	/*padding-top: 35px;*/
-	z-index: 999;
+    text-transform: uppercase;
+    background-color: #303030;
+    border-color: transparent;
+    padding: 5px 0 5px 0;
+    z-index: 999;
+    margin-bottom: 0px !important;
+    border: 0 !important;
+    position: relative;
+}
+.red-stripe {
+    padding: 15px 0;
+    background: #de0029;
+    position: absolute;
+    height: 100%;
+    width: 50%;
+    top: 0;
+    right: 0;
 }
 
-/*.navbar-brand {
-	margin-top: -25px;
-}*/
-
-.slidersection {
-	/*margin-top: 107px;*/
+.red-stripe:before {
+    width: 30px;
+    height: 100%;
+    content: '';
+    background: #de0029;
+    left: -20px;
+    position: absolute;
+    top: 0;
+    transform: skew(-10deg);
 }
-
-.carousel-header {
-	/*top: -107px;*/
+.red-stripe:after {
+    position: absolute;
+    content: '';
+    width: 110%;
+    height: 45%;
+    background: #303030;
+    top: 0;
+    right: 0;
 }
 
 .navbar-default .navbar-nav>li>a {
-    color: #000;
+    color: #fff;
+    font-size: 16px;
+    letter-spacing: 3px;
+}
+
+
+.navbar-brand > img {
+    width: 80%;
+}
+
+.imagensota {
+	width: 100%;
+	/*margin-top: -97px;*/
+}
+
+
+
+.navbar-default .navbar-nav>li>a {
+    color: #fff;
 }
 
 @media screen and (min-width: 768px){
-.captionheader {
-    right: 20%;
-    left: 20%;
-    padding-bottom: 100px;
-}	
+    
+	.navbar-nav {
+	    float: left;
+	    margin: 0;
+	    margin-top: 45px;
+	}
 }
 .captionheader {
     right: 20%;
@@ -50,10 +89,6 @@
 	text-transform: uppercase;
 	/*font-size: 1.5em;*/
 	margin-bottom: 50px;
-}
-
-.slideheader {
-	/*height: 898px;*/
 }
 
 .info {
